# fhir-py

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE.md  MANIFEST.in  Pipfile  README.md  docker-compose.tests.yaml  env_tests  pyproject.toml  requirements.txt  run_test.sh  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yaml  publish.yaml
aidbox/: __init__.py  exceptions.py  lib.py  utils.py
devbox/: .env.tpl  docker-compose.tests.m1.yaml  docker-compose.tests.yaml  run_devbox.sh
example/: .env.tpl  epic_auth.ipynb  epick_auth.ipynb
fhirpy/: __init__.py  exceptions.py  lib.py  utils.py
fhirpy/base/: __init__.py  client.py  exceptions.py  lib.py  lib_async.py  lib_sync.py  resource.py  resource_protocol.py  searchset.py  utils.py
fhirpy/schemas/: fhir-1.4.0.pkl  fhir-1.6.0.pkl  fhir-3.2.0.pkl  fhir-4.0.0.pkl  fhir-dev.pkl
jupyter-aidbox/: Dockerfile  examples.ipynb
jupyter-aidbox/examples/: examples.ipynb
notebook-example/: Dockerfile  examples.ipynb
schemas/: fhir-1.0.2.pkl  fhir-1.1.0.pkl  fhir-1.8.0.pkl  fhir-3.0.1.pkl  fhir-3.3.0.pkl  fhir-dev.pkl
tests/: __init__.py  config.py  main.py  test_lib.py  test_lib_async.py  test_lib_base.py  test_lib_sync.py  test_searchset.py  test_utils.py  types.py  utils.py
