[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fhirpy"
description = "FHIR client for python"
readme = "README.md"
license = { file = "LICENSE.md" }
keywords = ["fhir"]
dynamic = ["version"]
authors = [{ name = "beda.software", email = "fhirpy@beda.software" }]
dependencies = ["requests>=2.25.1", "aiohttp>=3.6.3", "pytz"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest>=6.2.4", "pytest-asyncio>=0.15.1", "responses>=0.13.3"]

[project.urls]
Homepage = "https://github.com/beda-software/fhir-py"
Documentation = "https://github.com/beda-software/fhir-py#readme"
Source = "https://github.com/beda-software/fhir-py.git"

[tool.tox]
legacy_tox_ini = """
    [pytest]
    addopts=--tb=short

    [tox]
    envlist =
        py38
        py39
        py310
        py311
    skip_missing_interpreters = true
    requires =
        virtualenv>=16.7.8
        pip>=19.3.1

    [gh-actions]
    python =
        3.8: py38
        3.9: py39
        3.10: py310
        3.11: py311

    [testenv]
    passenv =
        TOXENV
        CI
        CODECOV_*
    commands =
        pytest --doctest-modules --cov=./fhirpy tests
    setenv =
        PYTHONDONTWRITEBYTECODE=1
        PYTHONWARNINGS=once
    deps =
        -r requirements.txt
"""

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
(
  /(
    | \.git
    | \.pytest_cache
    | pyproject.toml
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".gitignore"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --color=yes"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
